# isaac_sim_AGX

./: README.md
ros2_car_model_ws/: isaacsim_import_robot.md  ranger_with_xarm6.usd
ros2_car_model_ws/scripts/: load_keyboard_control.py
ros2_car_model_ws/src/1557/: CMakeLists.txt  package.xml
ros2_car_model_ws/src/1557/launch/: display.launch  display.launch.py  display_xacro.launch  gazebo.launch
ros2_car_model_ws/src/1557/meshes/: box_link.STL  lifting_link.STL
ros2_car_model_ws/src/1557/rviz/: display.rviz
ros2_car_model_ws/src/1557/urdf/: 1557.csv  1557.urdf  1557.xacro  1557_all.urdf
ros2_car_model_ws/src/1557/urdf/xarm6_urdf/: xarm6.urdf.xacro  xarm6_robot.urdf.xacro  xarm6_robot_macro.xacro  xarm6_with_gripper.xacro
ros2_car_model_ws/src/1557/urdf/xarm_gripper/urdf/: xarm_gripper.urdf.xacro  xarm_gripper_model.xacro
ros2_car_model_ws/src/pan_tilt_description/: CMakeLists.txt  package.xml
ros2_car_model_ws/src/pan_tilt_description/urdf/: pan_tilt_st.urdf.xacro
ros2_car_model_ws/src/ranger_mini_v3/: CMakeLists.txt  package.xml
ros2_car_model_ws/src/ranger_mini_v3/launch/: display.launch  gazebo.launch
ros2_car_model_ws/src/ranger_mini_v3/urdf/: ranger_mini.urdf
